# tap-telegram

./: README.md  meltano.yml  pyproject.toml  tox.ini
.github/workflows/: build.yml  test.yml
tap_telegram/: __init__.py  __main__.py  client.py  streams.py  tap.py
tests/: __init__.py  test_core.py
