[project]
name = "tap-telegram"
version = "0.0.1"
description = "Singer tap for telegram, built with the Meltano Singer SDK."
readme = "README.md"
authors = [{ name = "Dmitry Zlachevsky", email = "akenona@mail.ru" }]
keywords = [
    "ELT",
    "Vk",
]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
license = "Apache-2.0"
license-files = [ "LICENSE" ]
requires-python = ">=3.9"
dynamic = ["dependencies"]

[tool.poetry]

[tool.poetry.dependencies]
singer-sdk = { version="~=0.46.3", extras = ["faker",] }
fs-s3fs = { version = "~=1.1.1", optional = true }
requests = ">=2.25.1"
pandas = ">=2.2.3"
tgcrypto = ">=1.2.5"
kurigram = { git = "https://github.com/DmitreyZl/pyrogram.git#egg=kurigram", branch = "dev" }


[tool.poetry.group.dev.dependencies]
pytest = ">=8"
singer-sdk = { version="~=0.43.1", extras = ["testing"] }

[tool.poetry.extras]
s3 = ["fs-s3fs"]

[tool.pytest.ini_options]
addopts = [
    "--durations=10",
]

[tool.mypy]
python_version = "3.12"
warn_unused_configs = true

[tool.ruff]
target-version = "py39"

[tool.ruff.lint]
ignore = [
    "COM812",  # missing-trailing-comma
]
select = ["ALL"]

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true

[tool.ruff.lint.pydocstyle]
convention = "google"

[build-system]
requires = ["poetry-core>=2,<3"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# CLI declaration
tap-telegram = 'tap_telegram.tap:Taptelegram.cli'
